fix: Navbar avatar icon, create-post page handles visible from svg

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -57,8 +57,7 @@ header {
     height: min-content;
     height: 48px;
     width: 48px;
-    padding: 0;
-    border-radius: 50%;
+    margin-left: 10px;
 }
 
 .dropdown {
