--- a/static/css/create_recipe.css
+++ b/static/css/create_recipe.css
@@ -85,6 +85,7 @@ label:not(.multiselect-dropdown label) {
     font-size: 1.8em;
     padding: 0.9em 0.5em 0.9em 0;
     cursor: grab;
+    width: 15px;
 }
 
 .multiselect-dropdown {
@@ -187,6 +188,11 @@ select {
 
     cropper-canvas {
         max-width: 100%;
+    }
+
+    #postButtonPrompt {
+        margin: 0.3em 0;
+        display: block;
     }
 }
 
